code>modify.fix text overflow when tag definition text is too long

--- a/css/tagmark.css
+++ b/css/tagmark.css
@@ -1,10 +1,3 @@
-/* .tabulator-row.tabulator-group {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-  } */
-
 :root {
     --tag--min-width: 1ch;
     --tag--max-witdh: auto;
@@ -52,12 +45,15 @@ body {
 #tag-definition,
 #all-tags-show-switch-container-title {
     position: absolute;
-    background-color: lightblue;
+    background-color: #333;
+    color: white;
     border: 1px solid #ccc;
     padding: 5px;
     border-radius: 5px;
     z-index: 1000;
     display: none;
+    font-size: 0.9em;
+    overflow: scroll;
 }
 
 .overlay {
